DSG-891 : Enqueue message
